--- a/pyquizhub/config/config.yaml
+++ b/pyquizhub/config/config.yaml
@@ -16,12 +16,12 @@ security:
   user_token_env: "PYQUIZHUB_USER_TOKEN"
 
 logging:
-  level: "INFO"
+  level: "DEBUG"
   format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
   date_format: "%Y-%m-%d %H:%M:%S"
   file:
     enabled: true
-    path: "logs/pyquizhub.log"
+    path: ".pyquizhub/logs/pyquizhub.log"
     max_size: 1048576  # 1MB
     backup_count: 5
     level: "DEBUG"
