--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,11 @@ flask-cors = "^5.0.0"
 [tool.poetry.scripts]
 pyquizhub-setup = "pyquizhub.config.initialize:initialize_system"
 
+[tool.poetry.group.dev.dependencies]
+sphinx = "^8.1.3"
+sphinx-autodoc-typehints = "^3.0.0"
+sphinx-rtd-theme = "^3.0.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
