* documentation CI fix

--- a/.github/workflows/publish-sphinx-documentation.yml
+++ b/.github/workflows/publish-sphinx-documentation.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - github-documentation
 
 jobs:
   build-and-deploy:
@@ -35,4 +34,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs/_build/html  # or your Sphinx build output directory
+          publish_dir: ./docs/_build/html
