--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,12 @@
-version: '3.8'
-
 services:
   api:
     build: .
     ports:
       - "8000:8000"
-    environment:
-      - PYQUIZHUB_CONFIG_PATH=/app/config/config.yaml
+    env_file:
+      - .env
     volumes:
-      - ./config:/app/config
-      - ./config.yaml:/app/config/config.yaml
+      - app_data:/app/data
     depends_on:
       - db
     networks:
@@ -20,11 +17,8 @@ services:
     command: poetry run python -m pyquizhub.adapters.web.server
     ports:
       - "8080:8080"
-    environment:
-      - PYQUIZHUB_CONFIG_PATH=/app/config/config.yaml
-    volumes:
-      - ./config:/app/config
-      - ./config.yaml:/app/config/config.yaml
+    env_file:
+      - .env
     depends_on:
       - api
     networks:
@@ -32,10 +26,8 @@ services:
 
   db:
     image: postgres:15-alpine
-    environment:
-      - POSTGRES_DB=pyquizhub
-      - POSTGRES_USER=pyquizhub
-      - POSTGRES_PASSWORD=pyquizhub
+    env_file:
+      - .env
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
@@ -45,6 +37,7 @@ services:
 
 volumes:
   postgres_data:
+  app_data:
 
 networks:
   pyquizhub-network:
