--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ jinja2 = "^3.1.5"
 python-multipart = "^0.0.20"
 flask = "^3.1.0"
 flask-cors = "^5.0.0"
+pydantic-settings = "^2.0.0"
+psycopg2-binary = "^2.9.11"
 
 [tool.poetry.scripts]
 pyquizhub-setup = "pyquizhub.config.initialize:initialize_system"
