--- a/.github/workflows/pep8_autofix.yml
+++ b/.github/workflows/pep8_autofix.yml
@@ -7,16 +7,18 @@ on:
     paths:
       - '**/*.py'
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   autofix-formatting:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
     - name: Check out code
       uses: actions/checkout@v4
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        fetch-depth: 0
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -29,7 +31,7 @@ jobs:
     - name: Auto-fix formatting
       run: |
         FILES=$(find . -name "*.py")
-        echo "Auto-fixing formatting for Python files..."
+        echo "Auto-fixing formatting..."
         for file in $FILES; do
             autopep8 --in-place --aggressive --aggressive $file
         done
@@ -37,13 +39,23 @@ jobs:
     - name: Check for changes
       id: verify_diff
       run: |
-        git diff --quiet . || echo "changed=true" >> $GITHUB_OUTPUT
+        git diff --quiet . || echo "changed=true" >> "$GITHUB_OUTPUT"
 
-    - name: Commit and push changes
+    - name: Commit and push to auto-format branch
       if: steps.verify_diff.outputs.changed == 'true'
       run: |
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "github-actions[bot]"
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+        git checkout -B auto-format
         git add -A
-        git commit -m "style: auto-fix PEP8 formatting [skip ci]"
-        git push
+        git commit -m "style: auto-fix PEP8 formatting"
+        git push -u origin auto-format
+
+    - name: Open or update Pull Request
+      if: steps.verify_diff.outputs.changed == 'true'
+      uses: peter-evans/create-pull-request@v5
+      with:
+        branch: auto-format
+        title: "style: automated PEP8 formatting"
+        body: "This PR applies automated PEP8 formatting fixes."
+
