--- a/.github/workflows/pep8_autofix.yml
+++ b/.github/workflows/pep8_autofix.yml
@@ -29,7 +29,17 @@ jobs:
     - name: Install autopep8
       run: pip install autopep8
 
-    - name: Auto-fix formatting
+    # ✅ Create/update auto-format branch BEFORE formatting
+    - name: Create auto-format branch
+      run: |
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
+
+        git checkout main
+        git pull origin main
+        git checkout -B auto-format
+
+    - name: Auto-fix formatting in branch
       run: |
         FILES=$(find . -name "*.py")
         echo "Auto-fixing formatting..."
@@ -42,22 +52,11 @@ jobs:
       run: |
         git diff --quiet . || echo "changed=true" >> "$GITHUB_OUTPUT"
 
-    - name: Commit and push to auto-format branch
+    - name: Commit and push formatted changes
       if: steps.verify_diff.outputs.changed == 'true'
       run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "github-actions[bot]@users.noreply.github.com"
-
-        # Ensure we're based on latest main
-        git checkout main
-        git pull origin main
-
-        # Create or update formatting branch
-        git checkout -B auto-format
         git add -A
         git commit -m "style: auto-fix PEP8 formatting" || true
-
-        # Force-push because auto-format is always regenerated
         git push -u origin auto-format --force
 
     - name: Open or update Pull Request
