--- a/.github/workflows/publish-sphinx-documentation.yml
+++ b/.github/workflows/publish-sphinx-documentation.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'  # Specify Python version consistent with your matrix
+          python-version: '3.12'
 
       - name: Install Poetry
         run: |
