feat: add Telegram bot adapter for PyQuizHub
Add a complete Telegram bot interface that allows users to take quizzes
through Telegram chat.

Features:
- Interactive quiz taking with inline buttons
- Support for all question types (multiple choice, text, integer, float, multiple select)
- Session management for multiple concurrent users
- Real-time quiz progress tracking
- Secure API integration with user token auth

Implementation:
- Add python-telegram-bot v22.5 dependency
- Create telegram adapter module in pyquizhub/adapters/telegram/
- Implement TelegramQuizBot class with full quiz flow
- Add comprehensive README with setup and usage instructions

Commands:
- /start - Welcome message
- /help - Show help information
- /quiz <token> - Start a quiz

All 618 existing tests still pass.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ flask = "^3.1.0"
 flask-cors = "^5.0.0"
 pydantic-settings = "^2.0.0"
 psycopg2-binary = "^2.9.11"
+python-telegram-bot = "^22.5"
 
 [tool.poetry.scripts]
 pyquizhub-setup = "pyquizhub.config.initialize:initialize_system"
