docs: add TELEGRAM_BOT_TOKEN to .env.example
Add Telegram bot token configuration to .env.example with instructions
on how to obtain token from @BotFather on Telegram.

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,10 @@
 # POSTGRES_DB=pyquizhub
 # POSTGRES_USER=pyquizhub
 # POSTGRES_PASSWORD=change-this-password
+
+# -----------------------------------------------------------------------------
+# Telegram Bot Configuration
+# -----------------------------------------------------------------------------
+# Get your bot token from @BotFather on Telegram
+# See: https://core.telegram.org/bots#6-botfather
+# TELEGRAM_BOT_TOKEN=your-telegram-bot-token-here
