--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,16 @@
 # Get your bot token from @BotFather on Telegram
 # See: https://core.telegram.org/bots#6-botfather
 # TELEGRAM_BOT_TOKEN=your-telegram-bot-token-here
+
+# -----------------------------------------------------------------------------
+# Discord Bot Configuration
+# -----------------------------------------------------------------------------
+# Create a Discord application and bot at https://discord.com/developers/applications
+# 1. Create a new application
+# 2. Go to "Bot" section and create a bot
+# 3. Copy the bot token
+# 4. Enable "MESSAGE CONTENT INTENT" in Bot settings (under Privileged Gateway Intents)
+# 5. Invite bot to your server using OAuth2 URL generator:
+#    - Scopes: bot, applications.commands
+#    - Bot Permissions: Send Messages, Read Messages/View Channels, Use Slash Commands, Embed Links
+# DISCORD_BOT_TOKEN=your-discord-bot-token-here
