--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,19 @@ services:
       - pyquizhub-network
     restart: unless-stopped
 
+  discord-bot:
+    build: .
+    command: poetry run python -m pyquizhub.adapters.discord.bot
+    env_file:
+      - .env
+    environment:
+      - PYQUIZHUB_API__BASE_URL=http://api:8000
+    depends_on:
+      - api
+    networks:
+      - pyquizhub-network
+    restart: unless-stopped
+
   db:
     image: postgres:15-alpine
     env_file:
