--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ flask-cors = "^5.0.0"
 pydantic-settings = "^2.0.0"
 psycopg2-binary = "^2.9.11"
 python-telegram-bot = "^22.5"
+discord-py = "^2.4.0"
 
 [tool.poetry.scripts]
 pyquizhub-setup = "pyquizhub.config.initialize:initialize_system"
@@ -29,6 +30,7 @@ pyquizhub-setup = "pyquizhub.config.initialize:initialize_system"
 sphinx = "^8.1.3"
 sphinx-autodoc-typehints = "^3.0.0"
 sphinx-rtd-theme = "^3.0.2"
+pytest-asyncio = "^1.3.0"
 
 [build-system]
 requires = ["poetry-core"]
