--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,16 @@ sphinx = "^8.1.3"
 sphinx-autodoc-typehints = "^3.0.0"
 sphinx-rtd-theme = "^3.0.2"
 pytest-asyncio = "^1.3.0"
+playwright = "^1.48.0"
+pytest-playwright = "^0.5.0"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
+testpaths = ["tests"]
+# Exclude e2e tests from default run due to Playwright/pytest-asyncio event loop conflicts
+# Run e2e tests separately with: pytest tests/e2e/
+norecursedirs = ["tests/e2e"]
 
 [build-system]
 requires = ["poetry-core"]
