* telegram attachments fix

--- a/.env.example
+++ b/.env.example
@@ -60,6 +60,18 @@
 # See: https://core.telegram.org/bots#6-botfather
 # TELEGRAM_BOT_TOKEN=your-telegram-bot-token-here
 
+# Enable file download/upload fallback for attachments that Telegram rejects by URL
+# SECURITY WARNING: Only enable this for TRUSTED quiz sources!
+# When enabled, the bot will download files to the server and re-upload them to Telegram.
+# This has security implications:
+#   - SSRF (Server-Side Request Forgery) risks if URLs are user-controlled
+#   - Resource exhaustion from large file downloads
+#   - Potential malware distribution
+# Current protections: SSRF blocking, 20MB file size limit, 30s timeout
+# Recommended: Keep disabled unless you fully control quiz content sources
+# Default: false
+# TELEGRAM_ENABLE_FILE_DOWNLOAD=false
+
 # -----------------------------------------------------------------------------
 # Discord Bot Configuration
 # -----------------------------------------------------------------------------
