--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pydantic-settings = "^2.0.0"
 psycopg2-binary = "^2.9.11"
 python-telegram-bot = "^22.5"
 discord-py = "^2.4.0"
+aiohttp = "^3.10.0"
 
 [tool.poetry.scripts]
 pyquizhub-setup = "pyquizhub.config.initialize:initialize_system"
