--- a/.env.example
+++ b/.env.example
@@ -84,3 +84,82 @@
 #    - Scopes: bot, applications.commands
 #    - Bot Permissions: Send Messages, Read Messages/View Channels, Use Slash Commands, Embed Links
 # DISCORD_BOT_TOKEN=your-discord-bot-token-here
+
+# -----------------------------------------------------------------------------
+# File Storage Configuration
+# -----------------------------------------------------------------------------
+# SECURITY WARNING: File uploads are DISABLED by default for security reasons!
+# Only enable file storage if you understand the security implications.
+#
+# File uploads can introduce serious security risks:
+#   - Malware distribution (viruses, trojans, ransomware)
+#   - XSS attacks (via SVG files with embedded JavaScript)
+#   - Path traversal vulnerabilities
+#   - Zip bombs (compressed files that expand to huge sizes)
+#   - Resource exhaustion (disk space, bandwidth)
+#   - SSRF (Server-Side Request Forgery) if combined with URL downloads
+#
+# Master kill switch - disables ALL file upload features
+# PYQUIZHUB_FILE_STORAGE__ENABLED=false
+
+# Upload permissions - who can upload files?
+# Quiz attachments: Allow quiz creators to upload files for quiz questions
+# PYQUIZHUB_FILE_STORAGE__UPLOAD__QUIZ_ATTACHMENTS__ENABLED=false
+# PYQUIZHUB_FILE_STORAGE__UPLOAD__QUIZ_ATTACHMENTS__ALLOW_ADMIN=true
+# PYQUIZHUB_FILE_STORAGE__UPLOAD__QUIZ_ATTACHMENTS__ALLOW_CREATOR=true
+
+# User answers: Allow quiz takers to upload files as answers
+# SECURITY WARNING: Extremely dangerous - only enable for TRUSTED users!
+# PYQUIZHUB_FILE_STORAGE__UPLOAD__USER_ANSWERS__ENABLED=false
+# PYQUIZHUB_FILE_STORAGE__UPLOAD__USER_ANSWERS__ALLOW_USER=false
+
+# File type controls - granular enable/disable per category
+# Images
+# PYQUIZHUB_FILE_STORAGE__ALLOWED_TYPES__IMAGES__ENABLED=false
+# PYQUIZHUB_FILE_STORAGE__ALLOWED_TYPES__IMAGES__MAX_SIZE_MB=10
+# SECURITY WARNING: SVG files can contain JavaScript (XSS attacks)
+# PYQUIZHUB_FILE_STORAGE__ALLOWED_TYPES__IMAGES__ALLOW_SVG=false
+
+# Audio
+# PYQUIZHUB_FILE_STORAGE__ALLOWED_TYPES__AUDIO__ENABLED=false
+# PYQUIZHUB_FILE_STORAGE__ALLOWED_TYPES__AUDIO__MAX_SIZE_MB=50
+
+# Video
+# PYQUIZHUB_FILE_STORAGE__ALLOWED_TYPES__VIDEO__ENABLED=false
+# PYQUIZHUB_FILE_STORAGE__ALLOWED_TYPES__VIDEO__MAX_SIZE_MB=100
+
+# Documents
+# PYQUIZHUB_FILE_STORAGE__ALLOWED_TYPES__DOCUMENTS__ENABLED=false
+# PYQUIZHUB_FILE_STORAGE__ALLOWED_TYPES__DOCUMENTS__MAX_SIZE_MB=20
+# SECURITY WARNING: Office documents can contain macros (malware risk)
+# PYQUIZHUB_FILE_STORAGE__ALLOWED_TYPES__DOCUMENTS__ALLOW_OFFICE_MACROS=false
+
+# Archives (ZIP, TAR, etc.)
+# SECURITY WARNING: Zip bombs, path traversal, malware distribution risks!
+# PYQUIZHUB_FILE_STORAGE__ALLOWED_TYPES__ARCHIVES__ENABLED=false
+# PYQUIZHUB_FILE_STORAGE__ALLOWED_TYPES__ARCHIVES__MAX_SIZE_MB=50
+# PYQUIZHUB_FILE_STORAGE__ALLOWED_TYPES__ARCHIVES__MAX_DECOMPRESSED_SIZE_MB=500
+
+# Storage backend selection
+# PYQUIZHUB_FILE_STORAGE__BACKEND=local  # Options: "local", "s3"
+
+# Local storage configuration
+# PYQUIZHUB_FILE_STORAGE__LOCAL__BASE_DIR=.pyquizhub/files
+
+# S3 storage configuration (for production deployments)
+# PYQUIZHUB_FILE_STORAGE__S3__BUCKET=pyquizhub-files
+# PYQUIZHUB_FILE_STORAGE__S3__REGION=us-east-1
+# PYQUIZHUB_FILE_STORAGE__S3__ENDPOINT_URL=  # For S3-compatible services (Minio, DigitalOcean Spaces, etc.)
+# AWS_ACCESS_KEY_ID=your-aws-access-key
+# AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+
+# Validation settings
+# PYQUIZHUB_FILE_STORAGE__VALIDATION__MIME_TYPE_VALIDATION=true
+# PYQUIZHUB_FILE_STORAGE__VALIDATION__MAGIC_NUMBER_CHECK=true  # Requires python-magic library
+# PYQUIZHUB_FILE_STORAGE__VALIDATION__CALCULATE_CHECKSUM=true
+# PYQUIZHUB_FILE_STORAGE__VALIDATION__VIRUS_SCAN_ENABLED=false  # Requires ClamAV
+
+# Quota limits (in megabytes)
+# PYQUIZHUB_FILE_STORAGE__QUOTAS__PER_USER_MB=100
+# PYQUIZHUB_FILE_STORAGE__QUOTAS__PER_QUIZ_MB=500
+# PYQUIZHUB_FILE_STORAGE__QUOTAS__GLOBAL_LIMIT_MB=10000
